--- a/src/classes/GenericAppConfiguration.cls
+++ b/src/classes/GenericAppConfiguration.cls
@@ -1,7 +1,9 @@
 public class GenericAppConfiguration {
 	public String apiVersion { get; set; }
 	public String baseUrl { get; set; }
+	public String baseDevUrl { get; set; }
 	public String waveApplicationsUrl { get; set; }
 	public Integer objectLoadingBatchSize { get; set; }
 	public Integer timeShiftingBatchSize { get; set; }
+	public String faqJsonUrl { get; set; }
 }
