Added AnalyticsDemoFAQ class

--- a/src/classes/GenericAppConfiguration.cls
+++ b/src/classes/GenericAppConfiguration.cls
@@ -6,4 +6,5 @@ public class GenericAppConfiguration {
 	public Integer objectLoadingBatchSize { get; set; }
 	public Integer timeShiftingBatchSize { get; set; }
 	public String faqJsonUrl { get; set; }
+	public String homeHeaderDescription { get; set; }
 }
