Fixed required attribute field issue
Now the required attribute is no longer specified when type is checkbox

--- a/src/classes/SF_MetadataUtils.cls
+++ b/src/classes/SF_MetadataUtils.cls
@@ -120,6 +120,7 @@ public with sharing class SF_MetadataUtils {
             }
             else if(fieldSpec.Type.equalsIgnoreCase('Checkbox')){
                 // Checkbox
+                cField.required = null;
                 if(String.isBlank(cField.defaultValue)){
                     cField.defaultValue = 'false';
                 }
