--- a/src/classes/SF_MetadataUtils.cls
+++ b/src/classes/SF_MetadataUtils.cls
@@ -27,6 +27,33 @@ public with sharing class SF_MetadataUtils {
         }
     }
 
+    public static List<String> getObjectsWithRulesAndOrWorkflows(List<String> objectsNames, Double apiVersion){
+        MetadataService.MetadataPort service = createService();
+        List<MetadataService.ListMetadataQuery> queries = new List<MetadataService.ListMetadataQuery>();
+        MetadataService.ListMetadataQuery queryWorkflow = new MetadataService.ListMetadataQuery();
+        queryWorkflow.type_x = 'WorkflowRule';
+        queries.add(queryWorkflow);
+        MetadataService.ListMetadataQuery queryValidationRule = new MetadataService.ListMetadataQuery();
+        queryValidationRule.type_x = 'ValidationRule';
+        queries.add(queryValidationRule);
+        MetadataService.FileProperties[] fileProperties = service.listMetadata(queries, apiVersion);
+
+        List<String> listWithObjects = new List<String>();
+        Set<String> objWithRulesOrWorkflows = new Set<String>();
+
+        for(MetadataService.FileProperties fileProperty: fileProperties){
+            objWithRulesOrWorkflows.add(fileProperty.fullName.substringBefore('.'));    
+        }
+
+        for(String obj: objectsNames){
+            if(objWithRulesOrWorkflows.contains(obj)){
+                listWithObjects.add(obj);
+            }
+        }
+
+        return listWithObjects;
+    }
+
     // Client passes the session id
     public static List<String> createObject(String objName, String sessionId){
         MetadataService.MetadataPort service = createService(sessionId);
